--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -869,6 +869,14 @@
 					offset = <0x38>;
 					mask = <0x61>;
 					status = "disabled";
+
+                                snvs_pwrkey: snvs-powerkey {
+                                        compatible = "fsl,sec-v4.0-pwrkey";
+                                        regmap = <&snvs>;
+                                        interrupts = <GIC_SPI 4 IRQ_TYPE_LEVEL_HIGH>;
+                                        linux,keycode = <116>;
+                                        wakeup-source;
+
 				};
 			};
 
